# MySynth

./: CMakeLists.txt  MySynth.jucer  readMe.md
Libs/: scala_scl.h
Resources/: MySynth.rc
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/Data/: AdsrData.cpp  AdsrData.h  FilterData.cpp  FilterData.h  OscData.cpp  OscData.h  ScaleData.cpp  ScaleData.h
Source/Libs/: scala_file.hpp  scala_kbm.cpp
Source/UI/: AdsrComponent.cpp  AdsrComponent.h  AdsrGraphComponent.cpp  AdsrGraphComponent.h  FFTComponent.cpp  FFTComponent.h  FilterComponent.cpp  FilterComponent.h  FmComponent.cpp  FmComponent.h  OscComponent.cpp  OscComponent.h  ScaleComponent.cpp  ScaleComponent.h
scales/: 14-26a.scl  17-note_hemifamity_sns.scl  17wtn.scl  19-31ji.scl  20wtn.scl  adler-claviblasticum.scl  alembert-rousseau2.scl  alembert1.scl  alembert2.scl  alembert3.scl  amogussussybaka.scl  barnes2.scl  barton13.scl  bassano.scl  bertier.scl  bertier2.scl  bethizy.scl  biezen2.scl  billeter3.scl  billeter4.scl  blackened-skies.scl  bozuji.scl  bruder-billeter.scl  bruder-bormann.scl  bruder-vier.scl  bruder.scl  bruder1-kuhl.scl  bruder2-kuhl.scl  bruder3-kuhl.scl  bruder4-kuhl.scl  bruder5-kuhl.scl  bruder6-kuhl.scl  bruder7-kuhl.scl  bruder8-kuhl.scl  caen.scl  canti.scl  carlos_alphab.scl  catfish7.scl  catfish9.scl  cet111b.scl  (+207 more)
